src/lang/YAMLDlightParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 YAMLDlight.g 2011-08-23 14:27:55

package lang;

import util.Coords;
import java.util.HashMap;
import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class YAMLDlightParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "EQUALS", "INT", "FLOAT", "ASSGN", "REMCPP", "REMC", "WS", "DIGIT", "'component'", "'{'", "'}'", "'event'", "';'", "'coords'", "','", "'var'", "':'", "'['", "'..'", "']'", "'dvar'", "'transition'", "'->'", "'forced'", "'connection'", "'constraint'", "'FALSE'", "'TRUE'", "'exists'", "'('", "')'", "'NOT'", "'AND'", "'OR'", "'+'", "'true'", "'false'", "'.'", "'synchronize'", "'observable'"
    };
    public static final int T__29=29;
    public static final int ASSGN=8;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EQUALS=5;
    public static final int FLOAT=7;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int DIGIT=12;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__44=44;
    public static final int REMCPP=9;
    public static final int INT=6;
    public static final int REMC=10;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int WS=11;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators


        public YAMLDlightParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public YAMLDlightParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return YAMLDlightParser.tokenNames; }
    public String getGrammarFileName() { return "YAMLDlight.g"; }


    public static Network net = null;
    public static State st = null;



    // $ANTLR start "net"
    // YAMLDlight.g:29:1: net : ( comp[tempConn] )+ ( synchro )+ ( observable )* ( state[init] )+ ;
    public final void net() throws RecognitionException {
        try {
            // YAMLDlight.g:29:4: ( ( comp[tempConn] )+ ( synchro )+ ( observable )* ( state[init] )+ )
            // YAMLDlight.g:30:7: ( comp[tempConn] )+ ( synchro )+ ( observable )* ( state[init] )+
            {

                    net = new Network();
                    final YAMLDTempConnections tempConn = new YAMLDTempConnections();
                  
            // YAMLDlight.g:34:7: ( comp[tempConn] )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==13) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // YAMLDlight.g:34:8: comp[tempConn]
            	    {
            	    pushFollow(FOLLOW_comp_in_net54);
            	    comp(tempConn);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

             
                    tempConn.copyConnections(net); 
                    final Map<YAMLDVar,YAMLDValue> init = new HashMap<YAMLDVar,YAMLDValue>();
                  
            // YAMLDlight.g:39:7: ( synchro )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==43) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // YAMLDlight.g:39:8: synchro
            	    {
            	    pushFollow(FOLLOW_synchro_in_net74);
            	    synchro();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            // YAMLDlight.g:40:7: ( observable )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==44) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // YAMLDlight.g:40:8: observable
            	    {
            	    pushFollow(FOLLOW_observable_in_net85);
            	    observable();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // YAMLDlight.g:41:7: ( state[init] )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // YAMLDlight.g:41:8: state[init]
            	    {
            	    pushFollow(FOLLOW_state_in_net96);
            	    state(init);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


                    st = new ExplicitState(net,init);
                  

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "net"


    // $ANTLR start "comp"
    // YAMLDlight.g:47:1: comp[YAMLDTempConnections tempConn] : 'component' comp_name= ID EQUALS '{' ( comp_def[tempComp,tempConn] )* '}' ;
    public final void comp(YAMLDTempConnections tempConn) throws RecognitionException {
        Token comp_name=null;

        try {
            // YAMLDlight.g:47:36: ( 'component' comp_name= ID EQUALS '{' ( comp_def[tempComp,tempConn] )* '}' )
            // YAMLDlight.g:48:7: 'component' comp_name= ID EQUALS '{' ( comp_def[tempComp,tempConn] )* '}'
            {
             YAMLDComponent tempComp = new YAMLDComponent(); 
            match(input,13,FOLLOW_13_in_comp139); 
            comp_name=(Token)match(input,ID,FOLLOW_ID_in_comp143); 
            match(input,EQUALS,FOLLOW_EQUALS_in_comp145); 

                    tempComp.setName(comp_name.getText());
                  
            match(input,14,FOLLOW_14_in_comp162); 
            // YAMLDlight.g:53:11: ( comp_def[tempComp,tempConn] )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==16||LA5_0==18||LA5_0==20||(LA5_0>=25 && LA5_0<=26)||(LA5_0>=28 && LA5_0<=30)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // YAMLDlight.g:53:12: comp_def[tempComp,tempConn]
            	    {
            	    pushFollow(FOLLOW_comp_def_in_comp165);
            	    comp_def(tempComp, tempConn);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,15,FOLLOW_15_in_comp170); 
             
                    net.addComponent(tempComp);
                  

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "comp"


    // $ANTLR start "comp_def"
    // YAMLDlight.g:59:1: comp_def[YAMLDComponent tempComp,YAMLDTempConnections tempConn] : ( 'event' event_name= ID ';' | 'coords' x= INT ',' y= INT ';' | 'var' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';' | 'var' var_name= ID ':' '{' var_dom[domElems] '}' ';' | 'dvar' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';' | 'dvar' var_name= ID ':' '{' var_dom[domElems] '}' ';' | 'transition' event_name= ID ':' f= formula[tempComp] '->' assignment_list[tempComp,al] ';' | 'transition' f= formula[tempComp] '->' assignment_list[tempComp,al] ';' | 'forced' 'transition' event_name= ID ':' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';' | 'forced' 'transition' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';' | 'connection' conn_name= ID ':' conn_type= ID EQUALS comp_name= ID ';' | 'constraint' f= formula[tempComp] ';' );
    public final void comp_def(YAMLDComponent tempComp, YAMLDTempConnections tempConn) throws RecognitionException {
        Token event_name=null;
        Token x=null;
        Token y=null;
        Token var_name=null;
        Token var_dom_beg=null;
        Token var_dom_end=null;
        Token earliest=null;
        Token latest=null;
        Token conn_name=null;
        Token conn_type=null;
        Token comp_name=null;
        YAMLDFormula f = null;


        try {
            // YAMLDlight.g:59:64: ( 'event' event_name= ID ';' | 'coords' x= INT ',' y= INT ';' | 'var' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';' | 'var' var_name= ID ':' '{' var_dom[domElems] '}' ';' | 'dvar' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';' | 'dvar' var_name= ID ':' '{' var_dom[domElems] '}' ';' | 'transition' event_name= ID ':' f= formula[tempComp] '->' assignment_list[tempComp,al] ';' | 'transition' f= formula[tempComp] '->' assignment_list[tempComp,al] ';' | 'forced' 'transition' event_name= ID ':' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';' | 'forced' 'transition' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';' | 'connection' conn_name= ID ':' conn_type= ID EQUALS comp_name= ID ';' | 'constraint' f= formula[tempComp] ';' )
            int alt6=12;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // YAMLDlight.g:60:7: 'event' event_name= ID ';'
                    {
                    match(input,16,FOLLOW_16_in_comp_def198); 
                    event_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def202); 
                    match(input,17,FOLLOW_17_in_comp_def204); 
                     tempComp.addEvent(new YAMLDEvent(tempComp,event_name.getText())); 

                    }
                    break;
                case 2 :
                    // YAMLDlight.g:62:7: 'coords' x= INT ',' y= INT ';'
                    {
                    match(input,18,FOLLOW_18_in_comp_def221); 
                    x=(Token)match(input,INT,FOLLOW_INT_in_comp_def225); 
                    match(input,19,FOLLOW_19_in_comp_def227); 
                    y=(Token)match(input,INT,FOLLOW_INT_in_comp_def231); 
                    match(input,17,FOLLOW_17_in_comp_def233); 

                            tempComp.visOptions().
                                coords().
                                    add(new Coords(Integer.parseInt(x.getText()),
                                                   Integer.parseInt(y.getText())));
                          

                    }
                    break;
                case 3 :
                    // YAMLDlight.g:69:7: 'var' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';'
                    {
                    match(input,20,FOLLOW_20_in_comp_def250); 
                    var_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def254); 
                    match(input,21,FOLLOW_21_in_comp_def256); 
                    match(input,22,FOLLOW_22_in_comp_def258); 
                    var_dom_beg=(Token)match(input,INT,FOLLOW_INT_in_comp_def262); 
                    match(input,23,FOLLOW_23_in_comp_def264); 
                    var_dom_end=(Token)match(input,INT,FOLLOW_INT_in_comp_def268); 
                    match(input,24,FOLLOW_24_in_comp_def270); 
                    match(input,17,FOLLOW_17_in_comp_def272); 
                     
                            YAMLDVar tempVar = new YAMLDVar(var_name.getText(),tempComp);
                            tempVar.setRange(Integer.parseInt(var_dom_beg.getText()),
                                             Integer.parseInt(var_dom_end.getText()));
                            tempComp.addVar(tempVar); 
                          

                    }
                    break;
                case 4 :
                    // YAMLDlight.g:76:7: 'var' var_name= ID ':' '{' var_dom[domElems] '}' ';'
                    {
                     ArrayList<String> domElems = new ArrayList<String>(); 
                    match(input,20,FOLLOW_20_in_comp_def297); 
                    var_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def301); 
                    match(input,21,FOLLOW_21_in_comp_def303); 
                    match(input,14,FOLLOW_14_in_comp_def305); 
                    pushFollow(FOLLOW_var_dom_in_comp_def307);
                    var_dom(domElems);

                    state._fsp--;

                    match(input,15,FOLLOW_15_in_comp_def310); 
                    match(input,17,FOLLOW_17_in_comp_def312); 

                            YAMLDVar tempVar = new YAMLDVar(var_name.getText(),tempComp);
                            for (String varName : domElems)
                                tempVar.domainPush(varName);
                            tempComp.addVar(tempVar);
                          

                    }
                    break;
                case 5 :
                    // YAMLDlight.g:84:7: 'dvar' var_name= ID ':' '[' var_dom_beg= INT '..' var_dom_end= INT ']' ';'
                    {
                    match(input,25,FOLLOW_25_in_comp_def328); 
                    var_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def332); 
                    match(input,21,FOLLOW_21_in_comp_def334); 
                    match(input,22,FOLLOW_22_in_comp_def336); 
                    var_dom_beg=(Token)match(input,INT,FOLLOW_INT_in_comp_def340); 
                    match(input,23,FOLLOW_23_in_comp_def342); 
                    var_dom_end=(Token)match(input,INT,FOLLOW_INT_in_comp_def346); 
                    match(input,24,FOLLOW_24_in_comp_def348); 
                    match(input,17,FOLLOW_17_in_comp_def350); 
                     
                            YAMLDDVar tempVar = new YAMLDDVar(var_name.getText(),tempComp);
                            tempVar.setRange(Integer.parseInt(var_dom_beg.getText()),
                                             Integer.parseInt(var_dom_end.getText()));
                            tempComp.addDVar(tempVar); 
                          

                    }
                    break;
                case 6 :
                    // YAMLDlight.g:91:7: 'dvar' var_name= ID ':' '{' var_dom[domElems] '}' ';'
                    {
                     ArrayList<String> domElems = new ArrayList<String>(); 
                    match(input,25,FOLLOW_25_in_comp_def376); 
                    var_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def380); 
                    match(input,21,FOLLOW_21_in_comp_def382); 
                    match(input,14,FOLLOW_14_in_comp_def384); 
                    pushFollow(FOLLOW_var_dom_in_comp_def386);
                    var_dom(domElems);

                    state._fsp--;

                    match(input,15,FOLLOW_15_in_comp_def389); 
                    match(input,17,FOLLOW_17_in_comp_def391); 

                            YAMLDDVar tempVar = new YAMLDDVar(var_name.getText(),tempComp);
                            for (String varName : domElems)
                                tempVar.domainPush(varName);
                            tempComp.addDVar(tempVar);
                          

                    }
                    break;
                case 7 :
                    // YAMLDlight.g:99:7: 'transition' event_name= ID ':' f= formula[tempComp] '->' assignment_list[tempComp,al] ';'
                    {
                     ArrayList<YAMLDAssignment> al = new ArrayList<YAMLDAssignment>(); 
                    match(input,26,FOLLOW_26_in_comp_def415); 
                    event_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def419); 
                    match(input,21,FOLLOW_21_in_comp_def421); 
                    pushFollow(FOLLOW_formula_in_comp_def425);
                    f=formula(tempComp);

                    state._fsp--;

                    match(input,27,FOLLOW_27_in_comp_def428); 
                    pushFollow(FOLLOW_assignment_list_in_comp_def430);
                    assignment_list(tempComp, al);

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_comp_def433); 
                     
                            YAMLDTrans tempTrans = 
                                new YAMLDTrans(tempComp,tempComp.getEvent(event_name.getText()), f);
                            tempTrans.setAssignments(al);
                            tempComp.addTrans(tempTrans);
                          

                    }
                    break;
                case 8 :
                    // YAMLDlight.g:107:7: 'transition' f= formula[tempComp] '->' assignment_list[tempComp,al] ';'
                    {
                     ArrayList<YAMLDAssignment> al = new ArrayList<YAMLDAssignment>(); 
                    match(input,26,FOLLOW_26_in_comp_def457); 
                    pushFollow(FOLLOW_formula_in_comp_def461);
                    f=formula(tempComp);

                    state._fsp--;

                    match(input,27,FOLLOW_27_in_comp_def464); 
                    pushFollow(FOLLOW_assignment_list_in_comp_def466);
                    assignment_list(tempComp, al);

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_comp_def469); 
                     
                            YAMLDTrans tempTrans = new YAMLDTrans(tempComp,f);
                            tempTrans.setAssignments(al);
                            tempComp.addTrans(tempTrans);
                          

                    }
                    break;
                case 9 :
                    // YAMLDlight.g:114:7: 'forced' 'transition' event_name= ID ':' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';'
                    {
                     ArrayList<YAMLDAssignment> al = new ArrayList<YAMLDAssignment>(); 
                    match(input,28,FOLLOW_28_in_comp_def493); 
                    match(input,26,FOLLOW_26_in_comp_def495); 
                    event_name=(Token)match(input,ID,FOLLOW_ID_in_comp_def499); 
                    match(input,21,FOLLOW_21_in_comp_def501); 
                    pushFollow(FOLLOW_formula_in_comp_def505);
                    f=formula(tempComp);

                    state._fsp--;

                    match(input,22,FOLLOW_22_in_comp_def508); 
                    earliest=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_comp_def512); 
                    match(input,23,FOLLOW_23_in_comp_def514); 
                    latest=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_comp_def518); 
                    match(input,24,FOLLOW_24_in_comp_def520); 
                    match(input,27,FOLLOW_27_in_comp_def522); 
                    pushFollow(FOLLOW_assignment_list_in_comp_def524);
                    assignment_list(tempComp, al);

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_comp_def527); 
                     
                            YAMLDTrans tempTrans = 
                                new YAMLDTrans(tempComp,tempComp.getEvent(event_name.getText()), f);
                            tempTrans.setAssignments(al);
                            tempTrans.makeForced(Double.parseDouble(earliest.getText()),
                                                 Double.parseDouble(latest.getText()));
                            tempComp.addTrans(tempTrans);
                          

                    }
                    break;
                case 10 :
                    // YAMLDlight.g:124:7: 'forced' 'transition' f= formula[tempComp] '[' earliest= FLOAT '..' latest= FLOAT ']' '->' assignment_list[tempComp,al] ';'
                    {
                     ArrayList<YAMLDAssignment> al = new ArrayList<YAMLDAssignment>(); 
                    match(input,28,FOLLOW_28_in_comp_def551); 
                    match(input,26,FOLLOW_26_in_comp_def553); 
                    pushFollow(FOLLOW_formula_in_comp_def557);
                    f=formula(tempComp);

                    state._fsp--;

                    match(input,22,FOLLOW_22_in_comp_def560); 
                    earliest=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_comp_def564); 
                    match(input,23,FOLLOW_23_in_comp_def566); 
                    latest=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_comp_def570); 
                    match(input,24,FOLLOW_24_in_comp_def572); 
                    match(input,27,FOLLOW_27_in_comp_def574); 
                    pushFollow(FOLLOW_assignment_list_in_comp_def576);
                    assignment_list(tempComp, al);

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_comp_def579); 
                     
                            YAMLDTrans tempTrans = new YAMLDTrans(tempComp,f);
                            tempTrans.setAssignments(al);
                            tempTrans.makeForced(Double.parseDouble(earliest.getText()),
                                                 Double.parseDouble(latest.getText()));
                            tempComp.addTrans(tempTrans);
                          
